--- a/forge_theme/base.html
+++ b/forge_theme/base.html
@@ -9,10 +9,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{{ base_url }}/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="{{ base_url }}/images/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="{{ base_url }}/images/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="{{ base_url }}/images/manifest.json">
     <link rel="mask-icon" href="{{ base_url }}/images/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="{{ base_url }}/images/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Forge Docs">
     <meta name="application-name" content="Forge Docs">
+    <meta name="msapplication-config" content="{{ base_url }}/images/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/a1f20be65b.css">
